fixed spacing issue

--- a/style.css
+++ b/style.css
@@ -608,6 +608,8 @@ border-right: 1px solid black;
 }
 
 #body_info{
+    display: flex;
+    align-items: center;
     width:fit-content;
     padding-left: 15px;
     padding-right: 15px;
